--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "import pyspark as spark\n",
+    "from pyspark.sql.functions import desc, asc\n",
     "import pandas as pd\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -125,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -396,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "211"
+       "236"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,42 +419,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+-------------------+-------+\n",
-      "|          Date_Time|    Sentiment_score|  Price|\n",
-      "+-------------------+-------------------+-------+\n",
-      "|2017-10-31 05:00:00|0.09226261767339003|6158.76|\n",
-      "|2017-10-31 06:00:00|0.10376996608248826| 6105.9|\n",
-      "|2017-10-31 07:00:00|0.11169094251431187|6094.36|\n",
-      "|2017-10-31 08:00:00|0.08213433168664136|6125.13|\n",
-      "|2017-10-31 09:00:00|0.08937042968493204| 6165.0|\n",
-      "|2017-10-31 10:00:00|0.10267176426801841|6170.77|\n",
-      "|2017-10-31 11:00:00|0.12814641170317434|6233.74|\n",
-      "|2017-10-31 12:00:00|0.10549754665746006|6201.03|\n",
-      "|2017-10-31 13:00:00|0.13845789734397101|6332.34|\n",
-      "|2017-10-31 14:00:00|0.11779438208175155|6363.13|\n",
-      "|2017-10-31 15:00:00|0.09131997304766154|6365.16|\n",
-      "|2017-10-31 16:00:00|0.09301943334583278|6364.78|\n",
-      "|2017-10-31 17:00:00|0.09206832917391784|6361.79|\n",
-      "|2017-10-31 18:00:00|0.10691324426615845|6335.64|\n",
-      "|2017-10-31 19:00:00|0.12217075088870974|6341.15|\n",
-      "|2017-10-31 20:00:00|0.12817142761147934|6370.08|\n",
-      "|2017-10-31 21:00:00|0.09238581351736849|6393.26|\n",
-      "|2017-10-31 22:00:00|0.10682700448924513|6383.94|\n",
-      "|2017-10-31 23:00:00|0.10207913246967248|6448.36|\n",
-      "|2017-11-01 00:00:00| 0.1003165565658219|6376.49|\n",
-      "+-------------------+-------------------+-------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "FinalTw_avg = FinalTw_avg.join(FinalBtc, FinalTw_avg.date == FinalBtc.Date_Time)\n",
     "FinalTw_avg = FinalTw_avg.selectExpr('Date_Time', 'score as Sentiment_score', 'Price').sort(asc(\"Date_Time\"))\n",
@@ -461,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -505,13 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "FinalTw_avg.repartition(1).write.csv(\"Two.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
+    "FinalTw_avg.repartition(1).write.csv(\"sparktwo.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
    ]
   },
   {
