three twitter dfs and more features

--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -42,12 +42,14 @@
     "Twdf1=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal1.csv',error_bad_lines=False,engine = 'python',header = None) \n",
     "Twdf2=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal2.csv',error_bad_lines=False,engine = 'python',header = None) \n",
     "Twdf3=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal3.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "Twdf4=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal4.csv',error_bad_lines=False,engine = 'python',header = None) \n",
     "Twdf2 = Twdf2.drop([2,3], axis=1)\n",
     "Twdf3 = Twdf3.drop([2,3], axis=1)\n",
+    "Twdf4 = Twdf3.drop([2,3], axis=1)\n",
     "print(Twdf1.head())\n",
     "print(Twdf3.head())\n",
     "print(Twdf2.head())\n",
-    "TwDF = pd.concat([Twdf1,Twdf2,Twdf3])"
+    "TwDF = pd.concat([Twdf1,Twdf2,Twdf3,Twdf4])"
    ]
   },
   {
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,9 +184,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+-----------+----------+-----+----------+----------+\n",
+      "|            DateTime|               Tweet|       CleanedTweets|   polarity|      subj|class|     p_pos|     p_neg|\n",
+      "+--------------------+--------------------+--------------------+-----------+----------+-----+----------+----------+\n",
+      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|-0.18888889|0.26666668| null|0.41383523| 0.5861648|\n",
+      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...| 0.25833333|      0.65| null| 0.9123907|0.08760928|\n",
+      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...|        0.0|       0.0| null| 0.7209173|0.27908275|\n",
+      "+--------------------+--------------------+--------------------+-----------+----------+-----+----------+----------+\n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from textblob import TextBlob  #passing cleaned tweets and getting a sentiment score for each tweet\n",
     "from textblob.sentiments import NaiveBayesAnalyzer\n",
@@ -210,7 +228,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+-----------+----------+-----+-----------+----------+-------------------+-------------------+\n",
+      "|            DateTime|               Tweet|       CleanedTweets|   polarity|      subj|class|      p_pos|     p_neg|         DateTime_c|    DateTime_casted|\n",
+      "+--------------------+--------------------+--------------------+-----------+----------+-----+-----------+----------+-------------------+-------------------+\n",
+      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|-0.18888889|0.26666668| null| 0.41383523| 0.5861648|2017-11-09 17:43:41|2017-11-09 17:43:41|\n",
+      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...| 0.25833333|      0.65| null|  0.9123907|0.08760928|2017-11-09 17:43:40|2017-11-09 17:43:40|\n",
+      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...|        0.0|       0.0| null|  0.7209173|0.27908275|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "|Thu Nov 09 17:43:...|RT @LevelNetwork:...|Join our telegram...|        0.0|       0.0| null|  0.3162046| 0.6837954|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "|Thu Nov 09 17:43:...|RT @realsheepwolf...|DIGAF FLOAT 16M T...|      -0.05|       0.8| null|0.120558605| 0.8794414|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "+--------------------+--------------------+--------------------+-----------+----------+-----+-----------+----------+-------------------+-------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def Tw_Time_format(stri):  #manipulating and casting the strings(DateTime) of tweets dataframe to timestamps\n",
     "    dic = {'Nov':'11','Oct':'10'}\n",
