--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pyspark as spark\n",
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,22 +41,23 @@
     }
    ],
    "source": [
-    "Twdf1=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal1.csv',error_bad_lines=False,engine = 'python',header = None) \n",
-    "Twdf2=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal2.csv',error_bad_lines=False,engine = 'python',header = None) \n",
-    "Twdf3=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal3.csv',error_bad_lines=False,engine = 'python',header = None) \n",
-    "Twdf4=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal4.csv',error_bad_lines=False,engine = 'python',header = None) \n",
-    "Twdf2 = Twdf2.drop([2,3], axis=1)\n",
-    "Twdf3 = Twdf3.drop([2,3], axis=1)\n",
-    "Twdf4 = Twdf3.drop([2,3], axis=1)\n",
-    "print(Twdf1.head())\n",
-    "print(Twdf3.head())\n",
-    "print(Twdf2.head())\n",
-    "TwDF = pd.concat([Twdf1,Twdf2,Twdf3,Twdf4])"
+    "Twdf1=pd.read_csv('/home/manoj/ProjectBigData/Data/tweetsfinal.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "# Twdf2=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal2.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "# Twdf3=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal3.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "# Twdf4=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal4.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "# Twdf2 = Twdf2.drop([2,3], axis=1)\n",
+    "# Twdf3 = Twdf3.drop([2,3], axis=1)\n",
+    "# Twdf4 = Twdf3.drop([2,3], axis=1)\n",
+    "# print(Twdf1.head())\n",
+    "# print(Twdf3.head())\n",
+    "# print(Twdf2.head())\n",
+    "# TwDF = pd.concat([Twdf1,Twdf2,Twdf3,Twdf4])\n",
+    "TwDF = Twdf1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -66,20 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "BtcDF=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/BitCoinPrice.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "BtcDF=pd.read_csv('/home/manoj/ProjectBigData/Data/BitCoinPrice.csv',error_bad_lines=False,engine = 'python',header = None) \n",
     "FullDataTw=sql.createDataFrame(TwDF)\n",
     "FullDataBtc=sql.createDataFrame(BtcDF) #creating pandas df and then changing it to pyspark df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#install nltk packages before doing this"
@@ -169,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# from textblob import TextBlob  #passing cleaned tweets and getting a sentiment score for each tweet\n",
@@ -184,25 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------------+--------------------+-----------+----------+-----+----------+----------+\n",
-      "|            DateTime|               Tweet|       CleanedTweets|   polarity|      subj|class|     p_pos|     p_neg|\n",
-      "+--------------------+--------------------+--------------------+-----------+----------+-----+----------+----------+\n",
-      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|-0.18888889|0.26666668| null|0.41383523| 0.5861648|\n",
-      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...| 0.25833333|      0.65| null| 0.9123907|0.08760928|\n",
-      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...|        0.0|       0.0| null| 0.7209173|0.27908275|\n",
-      "+--------------------+--------------------+--------------------+-----------+----------+-----+----------+----------+\n",
-      "only showing top 3 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from textblob import TextBlob  #passing cleaned tweets and getting a sentiment score for each tweet\n",
     "from textblob.sentiments import NaiveBayesAnalyzer\n",
@@ -228,25 +217,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------------+--------------------+-----------+----------+-----+-----------+----------+-------------------+-------------------+\n",
-      "|            DateTime|               Tweet|       CleanedTweets|   polarity|      subj|class|      p_pos|     p_neg|         DateTime_c|    DateTime_casted|\n",
-      "+--------------------+--------------------+--------------------+-----------+----------+-----+-----------+----------+-------------------+-------------------+\n",
-      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|-0.18888889|0.26666668| null| 0.41383523| 0.5861648|2017-11-09 17:43:41|2017-11-09 17:43:41|\n",
-      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...| 0.25833333|      0.65| null|  0.9123907|0.08760928|2017-11-09 17:43:40|2017-11-09 17:43:40|\n",
-      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...|        0.0|       0.0| null|  0.7209173|0.27908275|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
-      "|Thu Nov 09 17:43:...|RT @LevelNetwork:...|Join our telegram...|        0.0|       0.0| null|  0.3162046| 0.6837954|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
-      "|Thu Nov 09 17:43:...|RT @realsheepwolf...|DIGAF FLOAT 16M T...|      -0.05|       0.8| null|0.120558605| 0.8794414|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
-      "+--------------------+--------------------+--------------------+-----------+----------+-----+-----------+----------+-------------------+-------------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def Tw_Time_format(stri):  #manipulating and casting the strings(DateTime) of tweets dataframe to timestamps\n",
     "    dic = {'Nov':'11','Oct':'10'}\n",
@@ -262,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FinalTw = CleanDF.selectExpr(\"DateTime_casted as Date_Time\", \"CleanedTweets as Cleaned_Tweets\",\"polarity\",\"subj\",\"p_pos\",\"p_neg\")\n",
@@ -279,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from datetime import datetime \n",
@@ -298,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "CleandfBtc = FullDataBtc.withColumn(\"Cleaned_BTC_Time_New\",FullDataBtc['Cleaned_BTC_Time'].cast(TimestampType()))\n",
@@ -317,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FinalTw.printSchema()"
@@ -326,7 +305,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FinalBtc.printSchema()\n",
@@ -343,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dt_truncated = ((round(unix_timestamp(col('Date_Time')) / 3600) * 3600).cast('timestamp'))\n",
@@ -358,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FinalTw.registerTempTable(\"temp\")\n",
@@ -405,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FinalTw_avg.registerTempTable(\"avgs\")\n",
@@ -418,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "results.count()"
@@ -432,7 +421,7 @@
    },
    "outputs": [],
    "source": [
-    "results.repartition(1).write.csv(\"Three.csv\")#this will write df to single csv instead of writing diff csv acc to partitions "
+    "results.repartition(1).write.csv(\"nfeatures.csv\")#this will write df to single csv instead of writing diff csv acc to partitions "
    ]
   },
   {
@@ -464,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
